[package]
description = "Substrate offchain workers"
name = "sc-offchain"
version = "29.0.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
homepage = "https://substrate.io"
repository.workspace = true
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true }
bytes = "1.1"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
fnv = "1.0.6"
futures = { workspace = true }
futures-timer = "3.0.2"
hyper = { version = "0.14.16", features = ["http2", "stream"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
libp2p = "0.51.4"
num_cpus = "1.13"
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
threadpool = "1.7"
tracing = { workspace = true }
sc-client-api = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sc-network-types = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-keystore = { workspace = true }
sp-externalities = { workspace = true }
log = { workspace = true }

[dev-dependencies]
lazy_static = "1.4.0"
tokio = { workspace = true }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }
sc-client-db = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-tracing = { workspace = true }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.11.0", default-features = false }

[features]
default = []
