[package]
name = "pallet-ipfs"
description = "ipfs pallet"
version = "0.2.0"
license = "Unlicense"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
log = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
wasmi = { version = "0.35", default-features = false }
pallet-staking = { workspace = true }
hex = { workspace = true, features = ["serde"] }
uomi-primitives = { workspace = true }

# frame deps
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-transaction-pool = { workspace = true, features = ["std"] }
env_logger = { workspace = true }
log = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
frame-election-provider-support = { workspace = true, features = ["std"] }
sp-staking = { workspace = true, features = ["std"] }
sp-keystore	= { workspace = true, features = ["std"] }
pallet-staking-reward-curve = { workspace = true }
pallet-session = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-core/std",
    "pallet-staking/std",
    "wasmi/std",
    "uomi-primitives/std",
    "hex/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]