[package]
name = "pallet-uomi-engine"
description = "UOMI Engine"
version = "0.2.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
log = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
pallet-staking = { workspace = true }
pallet-session = { workspace = true }
pallet-ipfs = { workspace = true }
sp-inherents = { workspace = true }
wasmtime = { version = "23.0.1", optional = true }

# frame deps
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-externalities = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
env_logger = { workspace = true }
log = { workspace = true }
frame-election-provider-support = { workspace = true, features = ["std"] }
sp-staking = { workspace = true, features = ["std"] }
sp-keystore = { workspace = true, features = ["std"] }
pallet-staking = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-timestamp = { workspace = true, features = ["std"] }
pallet-staking-reward-curve = { workspace = true }
pallet-session = { workspace = true, features = ["std"] }
pallet-election-provider-multi-phase = { workspace = true, features = ["std"] }
pallet-babe = { workspace = true, features = ["std"] }
sp-consensus-babe = { workspace = true, features = ["std"] }
pallet-ipfs = { workspace = true }
sp-transaction-pool = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
serial_test = "2.0"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-transaction-pool/std", 
	"sp-runtime/std",        
	"sp-api/std",    
	"frame-election-provider-support/std",     
	"pallet-staking/std",
	"pallet-session/std",
	"pallet-balances/std",
	"pallet-timestamp/std",
	"pallet-session/std",
	"pallet-babe/std",
	"sp-consensus-babe/std",  
	"pallet-election-provider-multi-phase/std",
	"pallet-ipfs/std",
	"sp-externalities/std",
	"wasmtime"
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]