[package]
name = "pallet-evm-precompile-bridge"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pallet-uomi-engine = { workspace = true }
precompile-utils = { workspace = true }
log = { workspace = true }

# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true }


# Substrate
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
hex = { workspace = true }
